<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Llévame allí</string>
    <string name="menu_settings">Opciones</string>
    <string name="descripcion">Descripción de la dirección / par de coordenadas (latitud, longitud) lat[-90,90] y lon[-180,180]</string>
    <string name="descripcionHint">direccion / par de coordenadas</string>
    <string name="esDireccion">¿Es una dirección?</string>
    <string name="geocode">Geocode</string>
    <string name="llevame">Llévame allí</string>
    <string name="resultado">Resultado:</string>
    <string name="informacion"></string>

</resources>